fix: 修改 spacing xs 數值

--- a/src/sass/layouts/_about.sass
+++ b/src/sass/layouts/_about.sass
@@ -40,3 +40,5 @@
     &::before
       +size(40%, 6rem)
       background-size: 24% 100%
+    &__content-wrap
+      padding-top: var(--spacing-24)
